--- a/package.json
+++ b/package.json
@@ -7,27 +7,62 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "npm-run-all -p -r sass-watch http-server webpack-server",
     "test": "node test.js",
-    "webpack": "webpack --watch"
+    "http-server": "nodemon index.js",
+    "webpack-server": "webpack --watch",
+    "sass-watch": "sass --watch public/src/sass:public/src/css/min/ --style compressed"
   },
   "dependencies": {
     "assert": "^1.4.1",
+    "babel-preset-babili": "^0.1.4",
+    "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.2",
+    "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
+    "crawler": "^1.1.2",
+    "del": "^3.0.0",
     "ejs": "^2.5.7",
+    "emojione": "^3.1.2",
     "es6-shim": "^0.35.3",
     "express": "^4.16.2",
+    "express-fileupload": "^0.3.0",
     "express-minify": "^1.0.0",
     "express-session": "^1.15.6",
-    "file-loader": "^1.1.5",
+    "formidable": "^1.1.1",
     "fs": "0.0.1-security",
+    "gulp-imagemin": "^4.0.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-webpack": "^1.5.0",
+    "jquery": "^3.2.1",
+    "npm-run-all": "^4.1.2",
     "socket.io": "^2.0.4",
-    "webpack": "^1.15.0"
+    "strip-whitespace-plugin": "^1.0.2",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.1"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-minify-webpack-plugin": "^0.2.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-minify": "^0.2.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babili-webpack-plugin": "^0.1.2",
+    "electron-packager": "^10.1.0",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.1.0",
+    "gulp-uglify": "^3.0.0",
+    "gulp-watch-sass": "^1.3.2",
+    "jshint": "^2.9.5",
+    "nodemon": "^1.12.7",
     "request": "^2.81.0",
     "tape": "^4.7.0",
-    "uglifyjs-webpack-plugin": "^1.1.2"
+    "webpack": "^3.10.0"
   },
   "repository": {
     "type": "git",
