--- a/app/package.json
+++ b/app/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "app",
+  "name": "khanchat",
+  "productName": "khanchat",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Simple modern chat",
+  "main": "main.js",
   "scripts": {
     "start": "electron ./main.js",
+    "builder": "electron-packager . khanchat --overwrite --asar=true --platform=win32 --arch=ia32 --icon=./assets/icon.ico --prune=true --out=build --version-string.CompanyName=CE --version-string.FileDescription=CE --version-string.ProductName=\"khanchat\"",
     "build": "electron-packager . khanchat --overwrite --platform=win32 --arch=ia32 --icon=./assets/icon.ico --version-string.ProductName=khanchat --out=build",
     "setup": "node ./installer.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +20,7 @@
     "electron-winstaller": "^2.6.3"
   },
   "dependencies": {
+    "electron-builder": "^19.49.0",
     "electron-squirrel-startup": "^1.0.0"
   }
 }
