--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all -p -r sass-watch http-server",
+    "start": "npm-run-all -p -r sass-watch http-server webpack-server",
     "test": "node test.js",
     "http-server": "nodemon index.js",
     "webpack-server": "webpack --watch",
