--- a/package.json
+++ b/package.json
@@ -7,20 +7,18 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all -p -r sass-watch http-server webpack-server",
+    "start": "npm-run-all -p -r gulp-watch http-server webpack-server",
     "test": "node test.js",
     "http-server": "nodemon index.js",
     "webpack-server": "webpack --watch",
-    "sass-watch": "sass --watch public/src/sass:public/src/css/min/ --style compressed"
+    "gulp-watch": "gulp"
   },
   "dependencies": {
     "assert": "^1.4.1",
-    "babel-preset-babili": "^0.1.4",
     "babel-preset-env": "^1.6.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
-    "crawler": "^1.1.2",
     "del": "^3.0.0",
     "ejs": "^2.5.7",
     "emojione": "^3.1.2",
@@ -29,19 +27,18 @@
     "express-fileupload": "^0.3.0",
     "express-minify": "^1.0.0",
     "express-session": "^1.15.6",
-    "formidable": "^1.1.1",
     "fs": "0.0.1-security",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-csso": "^3.0.0",
     "gulp-imagemin": "^4.0.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-sourcemaps": "^2.6.1",
     "gulp-webpack": "^1.5.0",
-    "jquery": "^3.2.1",
     "npm-run-all": "^4.1.2",
     "socket.io": "^2.0.4",
-    "strip-whitespace-plugin": "^1.0.2",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.1"
   },
   "devDependencies": {
+    "autoprefixer": "^7.2.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^6.4.1",
     "babel-minify-webpack-plugin": "^0.2.0",
@@ -50,14 +47,18 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babili-webpack-plugin": "^0.1.2",
+    "cssnano": "^3.10.0",
     "electron-packager": "^10.1.0",
-    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.9.0",
     "gulp-concat": "^2.6.1",
     "gulp-jshint": "^2.0.4",
+    "gulp-postcss": "^7.0.0",
     "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^2.1.1",
     "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
-    "gulp-watch-sass": "^1.3.2",
     "jshint": "^2.9.5",
     "nodemon": "^1.12.7",
     "request": "^2.81.0",
