--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "npm-run-all -p -r sass-watch http-server webpack-server",
+    "start": "npm-run-all -p -r gulp-watch http-server webpack-server",
     "test": "node test.js",
     "http-server": "nodemon index.js",
     "webpack-server": "webpack --watch",
-    "sass-watch": "sass --watch public/src/sass:public/src/css/min/ --style compressed"
+    "gulp-watch": "gulp"
   },
   "dependencies": {
     "assert": "^1.4.1",
@@ -31,11 +31,14 @@
     "express-session": "^1.15.6",
     "formidable": "^1.1.1",
     "fs": "0.0.1-security",
-    "gulp-imagemin": "^4.0.0",
+    "gulp-autoprefixer": "^4.1.0",
+    "gulp-csso": "^3.0.1",
+    "gulp-imagemin": "^4.1.0",
     "gulp-minify-css": "^1.2.4",
-    "gulp-sourcemaps": "^2.6.1",
+    "gulp-sourcemaps": "^2.6.3",
     "gulp-webpack": "^1.5.0",
     "jquery": "^3.2.1",
+    "make-bot": "git+https://github.com/PaulaoDev/bot-make.git",
     "npm-run-all": "^4.1.2",
     "socket.io": "^2.0.4",
     "strip-whitespace-plugin": "^1.0.2",
