--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,5 @@
 registry=https://registry.npmjs.org/
+proxy=http://proxy.redecorp.br:8080
 strict-ssl=false
 init.author.name = PaulaoDev
 init.author.email = jskhanframework@gmail.com
