--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,15 @@
 {
-    "presets": ["env"]
+  "presets": [
+    [
+      "@babel/preset-env",
+      "@babel/preset-react",
+      {
+        "loose": true,
+        "targets": {
+          "node": "6.9"
+        }
+      }
+    ]
+  ],
+  "sourceType": "unambiguous"
 }
