--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -17,15 +17,19 @@ jobs:
         node-version: [10.x]
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
+      - uses: actions/cache@v1
+      - uses: actions/upload-artifact@v1
+      - uses: MarvinJWendt/run-node-formatter@1.5.2
       - uses: actions/setup-node@v1
+      - name: Use Node.js ${{ matrix.node-version }}
         with:
           node-version: ${{ matrix.node-version }}
+          name: audit
+          path: build/artifact
       - run: npm install
         env:
           CI: true
       - name: Cache Node.js modules
-        uses: actions/cache@v1
         with:
           path: ~/.npm # npm cache files are stored in `~/.npm` on Linux/macOS
           key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
@@ -33,11 +37,4 @@ jobs:
             ${{ runner.OS }}-node-
             ${{ runner.OS }}-
       - name: Artifact
-      - run: mkdir -p build/artifact
-      - run: npm audit --json > build/artifact/audit.json
-      - uses: actions/upload-artifact@v1
-        with:
-          name: audit
-          path: build/artifact
-      - name: Node Code Formatter
-      - uses: MarvinJWendt/run-node-formatter@1.5.2
+      - run: mkdir -p build/artifact && npm audit --json > build/artifact/audit.json
