--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,7 +36,7 @@ jobs:
  
       - name: npm install, build, and test
         run: |
-          mkdir -p build/artifact && npm audit --json > build/artifact/audit.json
+          npm audit --json > build/artifact/audit.json
         env:
           CI: true
 
