--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "compression": "^1.7.3",
+    "concurrently": "5.3.0",
     "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "8.0.0",
@@ -37,11 +38,14 @@
     "http": "^0.0.0",
     "isemail": "3.2.0",
     "mongoose": "^5.9.10",
+    "nodemon": "2.0.4",
     "path": "^0.12.7",
     "signale": "1.4.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.3.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "webpack": "^4.43.0",
+    "webpack-cli": "3.3.12"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -49,6 +53,7 @@
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
+    "babel-plugin-transform-decorators-legacy": "1.3.5",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
     "babel-preset-env": "^1.3.2",
@@ -56,6 +61,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.5.3",
+    "eslint": "7.9.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -78,7 +84,6 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^4.43.0",
     "webpack-bundle-analyzer": "^3.7.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
